Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM

0.01    Sun Mar 17 08:22:52 2013 +0000
    - initial release