@@ -10,7 +10,7 @@ main_module      = lib/Dist/Zilla/PluginBundle/Author/CHIM.pm
 dist = Dist-Zilla-PluginBundle-Author-CHIM
 
 [Prereqs]
-perl                                        = 5.008009
+perl                                        = 5.010001
 strict                                      = 0
 warnings                                    = 0
 Dist::Zilla                                 = 4.300030
@@ -24,3 +24,5 @@ Dist::Zilla::Plugin::Test::Compile          = 2.001
 Dist::Zilla::Plugin::Test::Kwalitee         = 2.03
 Dist::Zilla::Plugin::Test::Version          = 0.002004
 Moose                                       = 2.0
+Test::CPAN::Meta                            = 0
+Pod::Coverage::TrustPod                     = 0
