@@ -1,4 +1,9 @@
 Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM
 
+{{$NEXT}}
+    - updated prerequisites
+    - added plugins NextRelease, ConfirmRelease, UploadToCPAN
+    - added .travis.yml
+
 0.01    Sun Mar 17 08:22:52 2013 +0000
     - initial release
